Squashing Bugs

--- a/src/pages/components/player/player.css
+++ b/src/pages/components/player/player.css
@@ -46,7 +46,8 @@ h2{
   font-size:30px;
 }
 
-p{
+.channel{
   margin-left:5%;
-  margin-top:200px;
+  margin-top:70px;
+  position:absolute;
 }
